--- a/public/style1/index.html
+++ b/public/style1/index.html
@@ -20,11 +20,11 @@
       <header>
         <div>
           <hgroup>
-            <h1>Student Name</h1>
+            <h1>Nour Shams</h1>
             <h2>Codes and Sleeps</h2>
           </hgroup>
           <figure>
-            <img src="../images/110x110.png" alt="Student Name" />
+            <img src="../images/110x110.png" alt="Nour Shams" />
           </figure>
         </div>
       </header>
@@ -189,30 +189,30 @@
             <dl class="contact contact-email">
               <dt class="contact-type">Email</dt>
               <dd class="contact-value">
-                <a href="mailto:student@codi.tech">student@codi.tech</a>
+                <a href="mailto:student@codi.tech">nourshams@codi.tech</a>
               </dd>
             </dl>
             <dl class="contact contact-skype">
               <dt class="contact-type">Skype</dt>
-              <dd class="contact-value">first-last</dd>
+              <dd class="contact-value">nour-shams</dd>
             </dl>
             <dl class="contact contact-phone">
               <dt class="contact-type">Phone/Whatsapp</dt>
               <dd class="contact-value">
-                <a href="tel:+96170261482">+9613123123</a>
+                <a href="tel:+96170261482">+96176420500</a>
               </dd>
             </dl>
             <dl class="contact contact-github">
               <dt class="contact-type">Github</dt>
               <dd class="contact-value">
-                <a href="https://github.com/User/" target="_blank">UserName</a>
+                <a href="https://github.com/User/" target="_blank">nour-shams</a>
               </dd>
             </dl>
             <dl class="contact contact-facebook">
               <dt class="contact-type">Facebook</dt>
               <dd class="contact-value">
-                <a href="//www.facebook.com/profileName" target="_blank"
-                  >Profile Name</a
+                <a href="//www.facebook.com/nour" target="_blank"
+                  >Nour Mohammad Chams</a
                 >
               </dd>
             </dl>
