--- a/public/style2/index.html
+++ b/public/style2/index.html
@@ -12,7 +12,9 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style2.css" />
     <!-- /Stylesheets -->
+
   </head>
   <body>
     <div id="#wrapper">
